--- a/tex_src/report.tex
+++ b/tex_src/report.tex
@@ -76,10 +76,12 @@
 \subsection{Надёжность}
 Программа, написанная в рамках курса СКиПОД решала задачу нахождения ранга матрицы. Так как на момент написания программы не было известно, что в дальнейшем потребуется её модификация, была выбрана не очень удобная для обеспечения отказоустойчивости стратегия: каждый процесс работал с "полосой" в матрице (некоторым множеством её строк), причём обмен, собственно, данными между процессами был минимизирован. Так, было решено отказаться от обмена матричными полосами, так как накладные расходы были настолько велики, что параллельная программа работала в разы медленнее. Иными словами, ни на каком этапе работы (только в конце головной процесс собирает часть данных) процессы не имеют никакой информации о данных, над которыми работают другие процессы.\\
 Ввиду этого, наиболее правильным решением показалось сохранение промежуточных результатов работы каждого процесса в отдельный файл. В контрольной точке в бинарный файл сохраняется состояние "полосы", обрабатываемой процессом. Это необходимо и достаточно для того, чтобы, в случае падения процесса, другой (резервный) процесс мог продолжить работу вышедшего из строя.\\
-При запуске должен быть задан параметр $-np\ n$, где $n \in N$. Если $n$ --- степень двойки, то резервные процессы не создаются, а в противном случае будет создано $r$ резервных процессов, где $r$ --- разница между $n$ и ближайшей степенью двойки. Для создания аварийной ситуации заранее выбранный процесс "кладётся" с помощью вызова \textit{SIGKILL}.
+При запуске должен быть задан параметр $-np\ n$, где $n \in N$. Если $n$ --- степень двойки, то резервные процессы не создаются, а в противном случае будет создано $r$ резервных процессов, где $r$ --- разница между $n$ и ближайшей степенью двойки. Для создания аварийной ситуации заранее выбранный процесс "кладётся" с помощью вызова \textit{SIGKILL}.\\
+После выхода процесса из строя обработчик ошибок "ужимает" коммуникатор с помощью \\ \textit{MPIX\_Comm\_shrink}, то есть оставляет в нём только живые процессы, которые после чтения данных из файла (не обязательно с той же самой полосой, над которой они работали) продолжат работу.
 
 
-
+\section{Исходный код}
+В рамках задания по курсу "Распределённые системы" были реализованы две параллельные программы, исходный код которых можно найти репозитории \textit{https://github.com/zvonand/dis\_systems}. Кроме того, файлы с исходными текстами программ прикреплены в трекере на сайте \textit{dvmh.keldysh.ru}.
 
 
 \end{document}
